Document %use skainet-notebook magic in README
Splits the existing "SKaiNET notebook dependency" section into two
subsections — %use magic (registry-driven) and @file:DependsOn
(explicit coordinate) — so notebook authors see both ways to pull the
library and pick the one that matches their kernel.

The %use form needs a descriptor to land in
https://github.com/Kotlin/kotlin-jupyter-libraries; the matching
skainet-notebook.json is staged in a sibling clone for upstream
submission. Companion CHANGELOG note recorded under [Unreleased]
since the doc change ships separately from the 0.22.1 artifact (which
is already tagged and published).

Adds an explicit [#enabling-simd] anchor on the SIMD section so the
new cross-reference is robust regardless of AsciiDoc processor (the
default auto-id is _enabling_simd; some processors normalize it
differently).

Note: registry descriptors cannot inject JVM startup args — that
limitation is now called out next to the %use example so users don't
silently get the scalar CPU fallback on a vanilla kernel.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>